--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,7 @@ spring.servlet.multipart.max-file-size=1GB
 spring.servlet.multipart.max-request-size=1GB
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.location=${java.io.tmpdir}
+
+
+logging.level.org.springframework=WARN
+logging.level.com.example=DEBUG
